syntax = "proto3";
option java_multiple_files = true;
option java_package = "clh.comp313.gateway.grpc";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message LoginRequest {
  string password = 2;
  string email    = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email    = 3;
}

message ValidateRequest {
  string token = 1;
}

message CreateUserResponse {
  bool success   = 1;
  string message = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
}